major revamp to user mode
