# models/Skill.js
@@ -1,12 +1,15 @@
 const mongoose = require('mongoose');
 
-const skillSchema = mongoose.Schema({
-  skills:[{
+const skillSchema = new mongoose.Schema({
+  skills:{soft: [{
     type: String,
-  }],
+  }], technical: [{
+    type: String,
+  }]},
   user: {
     type: mongoose.Schema.Types.ObjectId, ref: 'User',
   },
 });
 const Skill = mongoose.model('Skill', skillSchema);
+
 module.exports = Skill
